fix: broken x-overflow and body width

--- a/css/blog.css
+++ b/css/blog.css
@@ -2,8 +2,8 @@
 
 body {
     margin: 0px;
-    gap: 0px;
-    width: 100vw;
+    /* width: 100vw causes overflow when a scrollbar is present */
+    overflow-x: hidden; /* Prevents horizontal scroll */
 }
 
 main {
@@ -15,7 +15,6 @@ main {
     align-items: center;
     gap: 32px;
     padding: 16px;
-    width: 100vw;
     box-sizing: border-box;
 }
 
@@ -24,7 +23,7 @@ h4 {
 }
 
 section {
-    max-width: 600px;
+    max-width: 800px;
 }
 
 p {
@@ -71,6 +70,14 @@ p {
     justify-content: center;
 }
 
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-grow: 1;
+    width: 100%;
+}
+
 header h4 {
     line-height: 1.5;
 }
@@ -107,6 +114,12 @@ header h4 {
 }
 
 .featured {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.article-stack {
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -180,6 +193,9 @@ footer {
     width: 100%;
     background-color: var(--bg-container-2);
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .footer-container {
@@ -187,11 +203,13 @@ footer {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    align-self: stretch;
 
-    width: 100w;
     margin: 0px;
     padding: 16px;
     gap: 24px;
+    box-sizing: border-box;
+    max-width: 800px;
 }
 
 .social-links {
@@ -208,7 +226,8 @@ footer {
     flex-direction: row;
     gap: 12px;
     padding-top: 16px;
-    padding-bottom: 8px;
+    padding-bottom: 16px;
+    margin: 8px 0px;
     border-bottom: solid 1px var(--text-secondary);
 }
 
@@ -217,11 +236,15 @@ footer {
     margin: 0px;
     width: 64px;
     height: 64px;
+    align-self: stretch;
+    aspect-ratio: 1/1;
 }
 
 .horizontal-card figure img {
     width: 64px;
     height: 64px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center;
 }
@@ -289,5 +312,62 @@ footer {
     .social-links {
         width: fit-content;
         align-self: flex-end;
+    }
+
+    header {
+        align-items: center;
+    }
+
+    .featured {
+        max-width: 1000px;
+    }
+
+    .featured .section-title {
+        align-self: center;
+    }
+
+    /* .feature-article {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: stretch;
+        justify-self: auto;
+        align-self: auto;
+        grid-row: 2 / span 1;
+        grid-column: 2 / span 1;
+    } */
+
+    .featured .article-stack {
+        align-self: stretch;
+        flex-grow: 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-gap: 12px;
+        max-height: 800px;
+    }
+
+    .featured .article-stack :first-child {
+        grid-row: 1 / span 2;
+        grid-column: 1 / span 1;
+    }
+
+    .featured .article-stack figure {
+        flex-grow: 1;
+    }
+
+    .horizontal-card .card-content {
+        flex-shrink: 1;
+    }
+
+    .horizontal-card figure {
+        height: calc();
+        aspect-ratio: 1/1;
+        /* Height is not needed, flexbox will stretch it */
+    }
+
+    .horizontal-card figure img {
+        width: 100%;
+        height: 100%;
     }
 }
